Reader: Fix follow button alignment site search

--- a/client/blocks/reader-subscription-list-item/style.scss
+++ b/client/blocks/reader-subscription-list-item/style.scss
@@ -13,7 +13,7 @@
 	-webkit-font-smoothing: subpixel-antialiased; // Fixes aliasing in Safari
 }
 
-.following-manage__subscriptions-list .reader-subscription-list-item__options {
+.reader-subscription-list-item__options {
 	display: flex;
 	flex-direction: column;
 	min-width: 24px;
